--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -199,3 +199,49 @@ body {
 .skill h3 {
   margin-bottom: 1rem;
 }
+
+
+/* Sección disponible para crear proyectos */
+.available {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background: #001f3f;
+  color: white;
+  text-align: center;
+  padding: 20px;
+}
+
+.available .container {
+  max-width: 800px;
+  width: 100%;
+}
+
+.available h2 {
+  font-size: 3rem;
+  margin-bottom: 1rem;
+}
+
+.available p {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+  font-weight: 400;
+  color: #ffffff;
+}
+
+.available .btn {
+  display: inline-block;
+  padding: 1rem 2rem;
+  background-color: #00bcd4;
+  color: white;
+  font-size: 1.2rem;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+.available .btn:hover {
+  background-color: #008c9e;
+  transform: translateY(-3px);
+}
