--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -200,7 +200,6 @@ body {
   margin-bottom: 1rem;
 }
 
-
 /* Sección disponible para crear proyectos */
 .available {
   display: flex;
@@ -230,18 +229,28 @@ body {
   color: #ffffff;
 }
 
+/* Estilo para el botón de WhatsApp */
 .available .btn {
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
   padding: 1rem 2rem;
-  background-color: #00bcd4;
+  background-color: #25d366;
   color: white;
   font-size: 1.2rem;
   text-decoration: none;
   border-radius: 5px;
   transition: background-color 0.3s ease, transform 0.3s ease;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .available .btn:hover {
-  background-color: #008c9e;
+  background-color: #128c7e;
   transform: translateY(-3px);
+}
+
+.available .whatsapp-icon {
+  width: 24px;
+  height: 24px;
+  margin-right: 10px;
 }
