--- a/assets/css/skills.css
+++ b/assets/css/skills.css
@@ -142,3 +142,66 @@
 .delay-8 {
   animation-delay: 1.6s;
 }
+.delay-9 {
+  animation-delay: 1.8s;
+}
+.delay-10 {
+  animation-delay: 2s;
+}
+.delay-11 {
+  animation-delay: 2.2s;
+}
+.delay-12 {
+  animation-delay: 2.4s;
+}
+.delay-13 {
+  animation-delay: 2.6s;
+}
+.delay-14 {
+  animation-delay: 2.8s;
+}
+.delay-15 {
+  animation-delay: 3s;
+}
+.delay-16 {
+  animation-delay: 3.2s;
+}
+.delay-17 {
+  animation-delay: 3.4s;
+}
+.delay-18 {
+  animation-delay: 3.6s;
+}
+.delay-19 {
+  animation-delay: 3.8s;
+}
+.delay-20 {
+  animation-delay: 4s;
+}
+.delay-21 {
+  animation-delay: 4.2s;
+}
+.delay-22 {
+  animation-delay: 4.4s;
+}
+.delay-23 {
+  animation-delay: 4.6s;
+}
+.delay-24 {
+  animation-delay: 4.8s;
+}
+.delay-25 {
+  animation-delay: 5s;
+}
+.delay-26 {
+  animation-delay: 5.2s;
+}
+.delay-27 {
+  animation-delay: 5.4s;
+}
+.delay-28 {
+  animation-delay: 5.6s;
+}
+.delay-29 {
+  animation-delay: 5.8s;
+}
