--- a/css/projects.css
+++ b/css/projects.css
@@ -26,9 +26,9 @@
   border-radius: 15px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   overflow: hidden;
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
   display: flex;
-  flex-direction: column;
+  flex-direction: row; /* Coloca los elementos en fila */
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .project-card:hover {
@@ -36,17 +36,22 @@
   box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
 }
 
-/* Vista previa más alta (iframe) */
+/* Vista previa (iframe) */
+.project-preview {
+  flex: 1;
+  min-width: 300px;
+}
+
 .project-preview iframe {
   width: 100%;
-  height: 350px; /* Aumentado de 200px a 350px */
+  height: 350px; /* Ajusta la altura como prefieras */
   border: none;
 }
 
 /* Estilo para la información del proyecto */
 .project-info {
+  flex: 1;
   padding: 20px;
-  flex-grow: 1;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
