--- a/css/navbar.css
+++ b/css/navbar.css
@@ -128,6 +128,8 @@
   background-color: rgba(0, 31, 63, 0.9);
   padding: 10px;
   gap: 10px;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 /* Estilos para pantallas pequeñas */
