--- a/css/navbar.css
+++ b/css/navbar.css
@@ -14,6 +14,13 @@
   box-sizing: border-box;
 }
 
+/* Contenedor para el ícono del menú y el logo */
+.left-container {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
 /* Navbar items */
 .navbar .nav-right {
   display: flex;
@@ -67,7 +74,6 @@
 /* Logo */
 .logo {
   flex-shrink: 0;
-  margin-right: 10px;
 }
 
 .logo-image {
