--- a/src/app/style.css
+++ b/src/app/style.css
@@ -1,9 +1,1 @@
-@import url("../components/css/body.css");
-@import url("../components/css/navbar.css");
-@import url("../components/css/header.css");
-@import url("../components/css/skills.css");
-@import url("../components/css/available.css");
-@import url("../components/css/cv.css");
-@import url("../components/css/about.css");
-@import url("../components/css/projects.css");
-@import url("../components/css/footer.css");
+@import url("../app.css");
