--- a/src/app/index.html
+++ b/src/app/index.html
@@ -81,7 +81,7 @@
           <p><span class="typing-text"></span></p>
           <!-- Botón para descargar CV -->
           <a
-            href="../components/pdf/CURRICULUM CARLOS ROJAS, MIGUEL ANGEL.pdf"
+            href="../components/pdf/CURRICULUM-CARLOS-ROJAS-MIGUEL-ANGEL.pdf"
             class="btn download-btn"
             download
           >
