--- a/src/app/app.html
+++ b/src/app/app.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portafolio de Miguel Angel Carlos Rojas</title>
     <link rel="icon" href="../assets/icons/icon.png" type="image/png" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./app.css" />
   </head>
 
   <body>
